--- a/style.css
+++ b/style.css
@@ -110,8 +110,18 @@ body{
     color: #91919C;
     font-size: 14px;
 }
+.link {
+    float: right;
+    padding: 20px;
+    color: #E02C6D;
+    overflow: hidden;
+    display: block;
+    cursor: pointer;
+    font-weight: bold;
+}
 
 footer{
+    margin-top: 70px;
     background-color: #0A0826;
     color: #fff;
     text-align: center ;
