--- a/style.css
+++ b/style.css
@@ -48,8 +48,9 @@ body{
     margin-left: 10px;
 }
 .main-baner .baner-right img{
-    border: 1px solid #ddd;
+    border: 1px solid #fff;
     border-radius: 50%;
+    padding: 23px;
 }
 
 .client-logo{
@@ -120,8 +121,124 @@ body{
     font-weight: bold;
 }
 
+
+
+
+.hero {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+    background-color: #0057f5;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 85.7%;
+  }
+  .hero-inner {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 2rem;
+    max-width: 900px;
+    margin: auto;
+  }
+  
+  
+  .hero-inner p,
+  .hero h2 {
+    color: #fff;
+  }
+  
+  .hero-button {
+    background: #fff;
+    color: #444;
+    border: 0;
+    padding: 1rem 2rem;
+    display: inline-block;
+    margin-top: 1rem;
+  }
+  
+  
+  .hero-image {
+    order: -1;
+    justify-items: center;
+  }
+  
+  
+  .hero-image img {
+    width: 100%;
+  }
+  
+  .hero-form {
+    margin-top: 1rem;
+  }
+  
+  
+  .hero-form-input {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  
+  
+  .hero-email-input {
+    padding: 1rem;
+    box-sizing: border-box;
+  }
+  
+  .hero-form-submit {
+    background-color: #f50057;
+    color: #fff;
+    border: none;
+    padding: 1rem 2rem;
+    margin-top: 0.5rem;
+  }
+  
+  @media (min-width: 700px) {
+    .hero {
+      padding: 3rem;
+    }
+  }
+  @media (min-width: 1200px) {
+    .hero {
+      padding: 6rem;
+    }
+  }
+  @media (min-width: 800px) {
+    .hero-inner {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      align-items: center;
+      gap: 2rem;
+    }
+  }
+  @media (min-width: 700px) {
+    .hero-button {
+      margin-top: 2rem;
+    }
+  }
+  @media (min-width: 800px) {
+    .hero-image {
+      order: initial;
+    }
+  }
+  @media (min-width: 700px) {
+    .hero-form {
+      margin-top: 2rem;
+    }
+  }
+  @media (min-width: 400px) {
+    .hero-form-input {
+      display: grid;
+      grid-template-columns: 1fr auto;
+    }
+  }
+  @media (min-width: 400px) {
+    .hero-form-submit {
+      margin-top: 0;
+    }
+  }
+  
 footer{
-    margin-top: 70px;
     background-color: #0A0826;
     color: #fff;
     text-align: center ;
