--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ body{
 }
 .client-logo img{
     padding: 45px 0px 35px 69px;
+    cursor: pointer;
 }
 
 .product-section-area h1{
@@ -253,4 +254,179 @@ footer span{
     margin-top: 20px;
     overflow: hidden;
     display: block;
+}
+
+/* for responsive */
+@media only screen and (max-width: 425px){
+  
+.main-baner{
+  width: 100%;
+  display: block;
+}
+.baner-left{
+  width: 100%;
+}
+
+.main-baner .baner-left p{
+  padding: 10px 0;
+  line-height: 21px;
+  color: #3A3A3A;
+  padding-right: 0;
+}
+.baner-right{
+  width: 100%;
+}
+.baner-right img{
+  width: 90%;
+  margin-top: 10px;
+}
+
+
+.client-logo img{
+  padding: 45px 10px 35px 69px;
+  width: 35%;
+  margin: 0 auto;
+
+}
+
+.product-collection.items{
+  display: block;
+  width: 100%;
+  margin: auto;
+}
+.product-collection.items .item{
+  height: 450px;
+  width: 300px;
+  margin: auto;
+  overflow: hidden;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow:  rgb(196, 196, 196) 5px 5px 10px;
+  margin-top: 24px;
+}
+.product-collection.items img{
+  text-align: center;
+  width: 300px;
+  height: 250px;
+}
+
+
+}
+
+@media only screen and (max-width: 600px){
+	/*Big smartphones [426px -> 600px]*/
+  .main-baner{
+    width: 100%;
+    display: block;
+  }
+  .baner-left{
+    width: 100%;
+  }
+  
+  .main-baner .baner-left p{
+    padding: 10px 0;
+    line-height: 21px;
+    color: #3A3A3A;
+    padding-right: 0;
+  }
+  .baner-right{
+    width: 100%;
+  }
+  .baner-right img{
+    width: 90%;
+    margin-top: 10px;
+  }
+  
+  
+  .client-logo img{
+    padding: 45px 10px 35px 69px;
+    width: 35%;
+    margin: 0 auto;
+  
+  }
+  
+  .product-collection.items{
+    display: block;
+    width: 100%;
+    margin: auto;
+  }
+  .product-collection.items .item{
+    height: 450px;
+    width: 300px;
+    margin: auto;
+    overflow: hidden;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow:  rgb(196, 196, 196) 5px 5px 10px;
+    margin-top: 24px;
+  }
+  .product-collection.items img{
+    text-align: center;
+    width: 300px;
+    height: 250px;
+  }
+  
+  
+
+}
+
+@media only screen and (max-width: 1200px){
+  /*Tablets [601px -> 1200px]*/
+  .main-baner{
+    width: 100%;
+    display: flex;
+  }
+  .baner-left{
+    width: 100%;
+  }
+  
+  .main-baner .baner-left p{
+    padding: 10px 0;
+    line-height: 21px;
+    color: #3A3A3A;
+    padding-right: 0;
+  }
+  .baner-right{
+    width: 100%;
+  }
+  .baner-right img{
+    width: 90%;
+    margin-top: 10px;
+  }
+  
+  
+  .client-logo{
+    padding: 30px 0;
+    width: 100%;
+    margin: 0 auto;
+  
+  }
+  .client-logo img{
+    padding: 0;
+    margin: 0 auto;
+  
+  }
+  
+  .product-collection.items{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 5px;
+  }
+  .product-collection.items .item{
+    height: 450px;
+    width: 300px;
+    margin: auto;
+    overflow: hidden;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow:  rgb(196, 196, 196) 5px 5px 10px;
+    margin-top: 24px;
+    margin-right: 27px;
+  }
+  .product-collection.items img{
+    text-align: center;
+    width: 300px;
+    height: 250px;
+  }
+  
 }
